<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple">
    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Random facts"
        android:textColor="#FFC107"/>
    <Button
        android:id="@+id/return1"
        android:onClick="return1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/go_back"
        android:textColor="@android:color/holo_purple"
        android:background="#FFC107"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/hockey"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFC107" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/graduate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFC107" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/family"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFC107" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:text="@string/draper"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFC107" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/highschool"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFC107" />
</RelativeLayout>